--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -4,11 +4,11 @@ name: eShopOnWeb Build and Test
 on: workflow_dispatch
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope
+  RESOURCE-GROUP: rg-eshoponweb-eastus
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 1e218fa6-aaec-4d87-9ea1-9881fcc9f9bf
-  WEBAPP-NAME: devops-webapp-westeurope-786724559
+  WEBAPP-NAME: devops-webapp-eastus-2398514839
 
 jobs:
   #Build, test and publish .net web project in repository
